<resources>
    <string name="app_name">BJHL-LivePlayer-UI</string>
    <string name="live_on_line_user_count">%1$d人在线</string>
    <string name="live_enter_live_room">进入直播教室</string>
    <string name="live_loading">加载中…</string>
    <string name="live_on_line_user_count_dialog">在线人数（%1$d人）</string>
    <string name="live_speaker_dialog">发言用户</string>
    <string name="live_video_on">视频中</string>
    <string name="live_close_speaking">结束发言</string>
    <string name="live_open_video">打开视频</string>
    <string name="live_close_video">关闭视频</string>
    <string name="live_agree">同意</string>
    <string name="live_teacher">老师</string>
    <string name="live_disagree">拒绝</string>
    <string name="live_publish">发布</string>
    <string name="live_edit">编辑</string>
    <string name="live_cancel">取消</string>
    <string name="live_mic">麦克风</string>
    <string name="live_camera">摄像头</string>
    <string name="live_beauty_filter">美颜</string>
    <string name="live_setting">设置</string>
    <string name="live_full_screen">全屏</string>
    <string name="live_send_message">发送</string>
    <string name="live_overspread">铺满</string>
    <string name="live_setting_ppt">课件展示：</string>
    <string name="live_setting_definition">画质设置：</string>
    <string name="live_setting_definition_low">流畅</string>
    <string name="live_setting_definition_high">高清</string>
    <string name="live_setting_link_type">线路选择：</string>
    <string name="live_setting_link_type_up1">发送1</string>
    <string name="live_setting_link_type_up2">发送2</string>
    <string name="live_setting_link_type_down1">接收1</string>
    <string name="live_setting_link_type_down2">接收2</string>
    <string name="live_setting_camera_switch">摄像头切换：</string>
    <string name="live_setting_camera_switch_front">前</string>
    <string name="live_setting_camera_switch_back">后</string>
    <string name="live_setting_camera_forbid_all">全体禁言</string>
    <string name="live_setting_camera_forbid_raise_hand">禁止举手</string>
    <string name="live_media_visitor_fail">游客不能举手发言</string>
    <string name="live_media_speak_applying">举手中</string>
    <string name="live_media_student_fail">请先举手发言，并等待老师同意</string>
    <string name="live_loading_more">正在加载…</string>
    <string name="live_media_speak_apply_agree">老师同意了您的发言请求</string>
    <string name="live_media_speak_apply_disagree">老师拒绝了您的发言请求</string>
    <string name="live_media_speak_closed_by_teacher">老师结束了您的发言</string>
    <string name="live_announcement">公告</string>
    <string name="live_cloud_record">录课</string>
    <string name="live_cloud_recording">录课中</string>
    <string name="live_help">求助</string>
    <string name="live_ppt">PPT</string>
    <string name="live_optional_input">选填</string>
    <string name="live_save">保存</string>
    <string name="live_uploading">上传中</string>
    <string name="live_queueing">等待添加</string>
    <string name="live_upload_fail">上传失败</string>
    <string name="live_ppt_empty">课件都不给，上课全靠嘴？</string>
    <string name="live_saved">已保存</string>
    <string name="live_upload_new_file">上传新文件</string>
    <string name="live_announcement_hint">输入公告内容</string>
    <string name="live_announcement_none">暂无公告</string>
    <string name="live_announcement_url_hint">为公告添加链接</string>
    <string name="live_announcement_view_url_hint">点击公告可以跳转</string>
    <string name="live_recorder_title">采集视频</string>
    <string name="live_recorder_switch_camera">切换摄像头</string>
    <string name="live_recorder_pretty_filter_on">开启美颜</string>
    <string name="live_recorder_pretty_filter_off">关闭美颜</string>
    <string name="live_recorder_camera_switch_off">关闭摄像头</string>
    <string name="live_ppt_manage">管理课件</string>
    <string name="live_hand_up_error">课程未开始，还不能举手</string>
    <string name="live_hand_up_forbid">老师禁止了举手</string>
    <string name="live_ppt_title">PPT</string>
    <string name="live_forbid_raise_hand">禁止举手</string>
    <string name="live_forbid_send_message">老师已禁止了发言</string>
    <string name="live_ppt_clear_all">清除</string>
    <string name="live_remove">移除</string>
    <string name="live_image_loading">图片加载中…</string>
    <string name="live_image_uploading">上传中…</string>
    <string name="live_image_loading_fail">图片加载失败</string>
    <string name="live_frequent_error">请勿频繁点击</string>
    <string name="live_frequent_error_line">请勿频繁切换线路</string>
    <string name="live_frequent_error_camera">请勿频繁切换前后摄像头</string>
    <string name="live_frequent_error_resolution">请勿频繁切换清晰度</string>
    <string name="live_retry">刷新重试</string>
    <string name="live_retry_suggestion">可添加技术支持 QQ %1$s 获得帮助</string>
    <string name="live_image_save">保存图片</string>
    <string name="live_cant_draw">您与老师不在同一页面，不能使用画笔模式</string>
    <string name="live_cant_draw_class_not_start">上课中才能使用画笔</string>
    <string name="live_not_support_beauty_filter">抱歉，系统版本低于4.3的手机暂不支持美颜功能</string>
    <string name="live_waiting_speak_apply_agree">正在举手发言，请等待老师同意</string>
    <string name="live_camera_on">摄像头已打开</string>
    <string name="live_camera_off">摄像头已关闭</string>
    <string name="live_mic_off_by_teacher">老师关闭了你的麦克风</string>
    <string name="live_mic_on_by_teacher">老师打开了你的麦克风</string>
    <string name="live_mic_on">麦克风已打开</string>
    <string name="live_mic_off">麦克风已关闭</string>
    <string name="live_override_error">哎呀出错了</string>
    <string name="live_teacher_not_in">老师未在教室</string>
    <string name="live_message_le">%1$s了</string>
    <string name="live_roll_call_count_down">老师要求您在%1$s秒内响应点名</string>
    <string name="live_roll_call_answer">答到</string>
    <string name="live_quiz_title">测验</string>
    <string name="live_quiz_close">关闭</string>
    <string name="live_quiz_dialog_tip">确认关闭？</string>
    <string name="live_quiz_dialog_cancel">再等等</string>
    <string name="live_quiz_dialog_confirm">确认</string>
    <string name="live_loading_support">96刻提供直播服务</string>
    <string name="live_speakers_max_video_exceed">请先关闭一路学生视频</string>
    <string name="live_cloud_record_setting">录课设置</string>
    <string name="live_cloud_record_setting_end">结束录课</string>
    <string name="live_cloud_record_setting_content">直播正在录制中</string>
    <string name="live_exit_hint_title">提示</string>
    <string name="live_exit_hint_confirm">确定退出</string>
    <string name="live_exit_hint_content">确定要退出直播教室吗？</string>
    <string name="live_audio_room_error">音频课不能开启摄像头</string>
    <string name="live_sweet_hint">温馨提示</string>
    <string name="live_mobile_network_hint">正在使用3G/4G网络，可手动关闭视频以减少流量</string>
    <string name="live_mobile_network_hint_less">正在使用3G/4G网络</string>
    <string name="live_mobile_network_confirm">知道了</string>
    <string name="live_switch_link_type_error">该房间不能切换链路类型</string>
    <string name="live_presenter_hint">(主讲)</string>
    <string name="live_no_camera_permission">摄像头权限获取失败，请前往系统设置中允许访问摄像头</string>
    <string name="live_no_mic_permission">麦克风权限获取失败，请前往系统设置中允许访问麦克风</string>
    <string name="live_i_got_it">知道了</string>
    <string name="live_force_speak_tip_all">老师开启了你的摄像头和麦克风，现在可以发言了</string>
    <string name="live_force_speak_tip_audio">老师开启了你的麦克风，现在可以发言了</string>
    <string name="live_force_speak_tip_video">老师开启了你的摄像头，现在可以发言了</string>
    <string name="live_invite_speak_tip">老师邀请你上麦发言</string>

</resources>

