<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:overScrollMode="always">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_live_room_dialog_margin"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <!--上方-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_video_window_bg"
            android:orientation="vertical">

            <!--title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_video_window_bg"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_live_room_margin_big"
                android:paddingTop="@dimen/activity_live_room_margin_big"
                android:text="@string/live_recorder_title"
                android:textColor="@color/live_text_color_mid_light"
                android:textSize="13sp" />

            <View style="@style/LiveDivider" />

            <!--全屏-->
            <TextView
                android:id="@+id/dialog_recorder_fullscreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_dialog_radius_0dp"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_live_room_margin_big"
                android:paddingTop="@dimen/activity_live_room_margin_big"
                android:text="@string/live_full_screen"
                android:textColor="@color/live_blue" />

            <View style="@style/LiveDivider" />

            <!--切换摄像头-->
            <TextView
                android:id="@+id/dialog_recorder_switch_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_dialog_radius_0dp"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_live_room_margin_big"
                android:paddingTop="@dimen/activity_live_room_margin_big"
                android:text="@string/live_recorder_switch_camera"
                android:textColor="@color/live_blue" />

            <View style="@style/LiveDivider" />

            <!--美颜开关-->
            <TextView
                android:id="@+id/dialog_recorder_pretty_filter_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_dialog_radius_0dp"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_live_room_margin_big"
                android:paddingTop="@dimen/activity_live_room_margin_big"
                android:text="@string/live_recorder_pretty_filter_on"
                android:textColor="@color/live_blue" />

            <View style="@style/LiveDivider" />

            <!--关闭摄像头-->
            <TextView
                android:id="@+id/dialog_recorder_turnoff_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_dialog_radius_bottom_6dp"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_live_room_margin_big"
                android:paddingTop="@dimen/activity_live_room_margin_big"
                android:text="@string/live_recorder_camera_switch_off"
                android:textColor="@color/live_red" />

        </LinearLayout>
        <!--取消-->
        <TextView
            android:id="@+id/dialog_recorder_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_live_room_margin"
            android:background="@drawable/selector_dialog_radius_6dp"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_live_room_margin_big"
            android:paddingTop="@dimen/activity_live_room_margin_big"
            android:text="@string/live_cancel"
            android:textColor="@color/live_blue" />

    </LinearLayout>

</ScrollView>